--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -14,13 +14,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="../images/cat.jpg" alt="First slide">
+                <img class="d-block w-100" src="../images/cat.jpg" alt="First slide"/>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../images/dog1.jpg" alt="Second slide">
+                <img class="d-block w-100" src="../images/dog1.jpg" alt="Second slide"/>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../images/dog2.jpg" alt="Third slide">
+                <img class="d-block w-100" src="../images/dog2.jpg" alt="Third slide"/>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
