finished the adopter home

--- a/src/main/resources/templates/adopter/home.html
+++ b/src/main/resources/templates/adopter/home.html
@@ -33,12 +33,16 @@
             <!--Column Two: Actions-->
             <div class="col-md-4 col-sm-12">
 
+                <!--TODO: Add the appropirate pages and Controllers for the pages-->
+                <a href="/programs"><button class="btn btn-primary">Join Program</button></a>
+                <a href="/search"><button class="btn btn-primary">Find a Pet</button></a>
+                <a href="/preferences"><button class="btn btn-primary">Preferences</button></a>
             </div>
 
 
             <!--Column Three: Nearby Shelters-->
             <div class="col-md-4 col-sm-12">
-
+                <!--TODO: Google API search results here-->
             </div>
         </div>
         <!--ROW TWO END-->
