pets html and programs html

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head('Welcome!')"/>
+<!--<head th:replace = "partials :: head('Welcome!')"/>-->
 <body>
 
     <nav th:replace="partials :: navbar"/>
@@ -35,6 +35,7 @@
 
     <footer th:replace="partials::footer"/>
     <div th:replace="partials::scripts"/>
+
 
 </body>
 </html>
