--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -4,42 +4,31 @@
 
 <!--<div th:fragment="head (title)" >-->
 <!--<title><span th:text="${title}"></span></title>-->
-<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>-->
 <!--</div>-->
-<head th:fragment="head(title)">
+<head th:fragment="head(title)"><span><strong>Welcome to Pet-Tential</strong></span>
     <meta charset="UTF-8"/>
     <title th:text="${title}"></title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
 </head>
+
+<header>
+    header
+</header>
 <body>
-
-
-<div th:fragment="header">
-    <header>
-        Header
-    </header>
-</div>
 <nav th:fragment="navbar">
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="/">View Pets</a></li>
-        <!--<li class="nav-item"><a class="nav-link" href="/">Logout</a></li>-->
-
-        <li>
-            <form th:action="@{/logout}" th:method="post">
-                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
-            </form>
-        </li>
-        <!--<li class="nav-item"><a class="nav-link" href="/quotes">Quotes</a></li>-->
-        <!--<li class="nav-item"><a class="nav-link" href="/quotes/random">Random Quote</a></li>-->
+        <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
     </ul>
 </nav>
 
 <div th:fragment="footer">
     <footer class="footer">
-        Footer
+        2019 Codeup. For Educational Purposes Only.
     </footer>
 </div>
 <div th:fragment="scripts">
