--- a/src/main/resources/templates/adopter/programs.html
+++ b/src/main/resources/templates/adopter/programs.html
@@ -11,7 +11,7 @@
         <div class="col"></div>
         <div class="col">
 
-                <div class="card" style="width: 18rem;" th:each="program:${program}">
+                <div class="card" style="width: 18rem;" th:each="program:${programs}">
                     <form th:action="adopter/program/{id}(id=${post.id})" method="post">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${program.name}"></h5>
