preferences controller/html update

--- a/src/main/resources/templates/adopter/preferences.html
+++ b/src/main/resources/templates/adopter/preferences.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<form action="/preferences" method="post" th:object="${preference}" >
+<form action="adopter/preferences" method="post" th:object="${preference}" >
     <label>Breed</label>
     <input type="text" th:field="*{breed}" />
     <label>Age</label>
