--- a/src/main/resources/templates/adopter/all_pets.html
+++ b/src/main/resources/templates/adopter/all_pets.html
@@ -13,9 +13,10 @@
    <div class="col-md-4 col-lg-3">
        <div class="card" th:each="pet : ${pets}">
         <div class="card-body">
-            <a th:href="'adopt/pet/' + ${pet.getId()}"><img th:src="${pet.getPicture()}" class="card-img-top" alt="Pet Image"/></a>
-            <h3 class="card-title" th:text="${pet.getAge()}"></h3>
-            <p class="card-text" th:text="${pet.getSex()}"></p>
+            <a th:href="'adopt/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="card-img-top" alt="Pet Image"/></a>
+            <h3 class="card-title" th:text="${pet.age}"></h3>
+            <p class="card-text" th:text="${pet.description}"></p>
+            <p class="card-text" th:text="${pet.sex}"></p>
         </div>
     </div>
    </div>
