--- a/src/main/resources/templates/shelter/createpets.html
+++ b/src/main/resources/templates/shelter/createpets.html
@@ -14,6 +14,8 @@
 <nav th:replace="partials :: navbar"/>
 <header th:replace="partials::header"/>
 
+<form th:action="/create/pet" th:method="post">
+
 <input class="form-control" type="text" placeholder="Enter Pet Breed Here">
 <br>
 <br>
@@ -28,6 +30,7 @@
 <br>
 <button type="button" action="submit" class="btn btn-primary btn-lg">Submit</button>
 
+</form>
 
 
 
