pet controller adjustments

--- a/src/main/resources/templates/shelter/createpets.html
+++ b/src/main/resources/templates/shelter/createpets.html
@@ -14,7 +14,7 @@
 <nav th:replace="partials :: navbar"/>
 <header th:replace="partials::header"/>
 
-<form th:action="/create/pet" th:method="post">
+<form th:action="/create/pets" th:method="post">
 
 <input class="form-control" type="text" placeholder="Enter Pet Breed Here">
 <br>
@@ -31,7 +31,6 @@
 <button type="button" action="submit" class="btn btn-primary btn-lg">Submit</button>
 
 </form>
-
 
 
 <footer th:replace="partials::footer" />
