adjusted home.html for both adopter and shelter for working buttons

--- a/src/main/resources/templates/adopter/home.html
+++ b/src/main/resources/templates/adopter/home.html
@@ -34,9 +34,9 @@
             <div class="col-md-4 col-sm-12">
 
                 <!--TODO: Add the appropirate pages and Controllers for the pages-->
-                <a href="/programs"><button class="btn btn-primary">Join Program</button></a>
-                <a href="/search"><button class="btn btn-primary">Find a Pet</button></a>
-                <a href="/preferences"><button class="btn btn-primary">Preferences</button></a>
+                <a href="/adopter/programs"><button class="btn btn-primary">Join Program</button></a>
+                <a href="/adopter/pets"><button class="btn btn-primary">Find a Pet</button></a>
+                <a href="/adopter/preferences"><button class="btn btn-primary">Preferences</button></a>
             </div>
 
 
