--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -33,9 +33,7 @@
         <div class="col-md-4 col-sm-12">
 
             <!--TODO: Add the appropriate pages and Controllers for the pages-->
-            <a href="/programs"><button class="btn btn-primary">Join Program</button></a>
-            <a href="/search"><button class="btn btn-primary">Find a Pet</button></a>
-            <a href="/preferences"><button class="btn btn-primary">Preferences</button></a>
+            <a href="/create/pet"><button class="btn btn-primary">Create a pet</button></a>
         </div>
     </div>
     <!--ROW TWO END-->
