added controllers to handle the shelter registration

--- a/src/main/resources/templates/shelter/register.html
+++ b/src/main/resources/templates/shelter/register.html
@@ -5,7 +5,9 @@
 
 <header th:replace="header"/>
 
-<form th:object="${shelter}" th:action="gi"/>
+<form th:object="${shelter}" method="post">
+
+</form>
 
 
 <footer th:replace="footer"/>
