fixed an issue with the controller going to the wrong address

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -19,7 +19,7 @@
 <nav th:fragment="navbar">
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Register</a></li>
+        <li class="nav-item"><a class="nav-link" href="/sign-up">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="/">View Pets</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
