--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -25,8 +25,8 @@
     <label for="number">Number</label>
     <input id="number" type="text" th:field="*{number}" />
 
-    <label for="shelter?"> Trying to adopt out animals? </label>
-    <input type="checkbox" id="shelter?" th:field="*{isShelter}"/>
+    <label for="shelter"> Trying to adopt out animals? </label>
+    <input type="checkbox" id="shelter" th:field="*{isShelter}"/>
 
     <input value="Sign me up!" type="submit" />
 </form>
