--- a/src/main/resources/templates/adopter/programs.html
+++ b/src/main/resources/templates/adopter/programs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Title</title>
 </head>
 <body>
@@ -12,17 +12,15 @@
         <div class="col">
 
                 <div class="card" style="width: 18rem;" th:each="program:${programs}">
-                    <form th:action="adopter/program/{id}(id=${post.id})" method="post">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${program.name}"></h5>
                         <p class="card-text" th:text="${program.type}"></p>
                         <p class="card-text" th:text="${program.description}"></p>
                         <p class="card-text" th:text="${program.time} + ':00 pm'"></p>
                         <p class="card-text" th:text="${program.length} + ' hours'"></p>
-                        <p class="card-text" th:text="'Breed: ' + ${program.breed}"></p>
+                        <p class="card-text" th:text="'Breed: ' + ${program.petType}"></p>
                     </div>
                 </div>
-            </form>
 
         </div>
         <div class="col"></div>
