--- a/src/main/resources/templates/shelter/shelter.html
+++ b/src/main/resources/templates/shelter/shelter.html
@@ -6,6 +6,15 @@
 <nav th:replace="partials::navbar"/>
 <header th:replace="partials::header"/>
 
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h2 class="card-title" th:text="${shelter.name}"></h2>
+            <p class="card-text" th:text="${shelter.location}"></p>
+
+        </div>
+    </div>
+</div>
 
 <footer th:replace="partials::footer"/>
 <div th:replace="partials::scripts"/>
