--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -41,7 +41,7 @@
     <!--ROW THREE-->
     <div class="row">
         <div class="col-md-4 offset-md-4">
-            <a href="/pets"> <button class="btn btn-primary"> Pet Management</button></a>
+            <a href="/adopter/pets"> <button class="btn btn-primary"> Pet Management</button></a>
         </div>
     </div>
 
