--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -12,16 +12,13 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
 </head>
 
-<header>
-    header
-</header>
 <body>
-<nav th:fragment="navbar">
+<nav th:fragment="navbar" style="background-color: purple; color: white">
     <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="/sign-up">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">View Pets</a></li>
+        <li class="nav-item"><a class="nav-link" href="/adopter/pets">View Pets</a></li>
         <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
     </ul>
 </nav>
