--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Log In</title>
 </head>
+<nav th:replace="partials :: navbar"/>
 <body>
 <h1>Log In</h1>
 <div th:if="${param.error}">
