--- a/src/main/resources/templates/adopter/programs.html
+++ b/src/main/resources/templates/adopter/programs.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<nav th:replace="partials :: navbar"/>
 <div class="container">
     <div class="row">
         <div class="col"></div>
