--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--<head th:replace = "partials :: head('Welcome!')"/>-->
+<head th:replace = "partials :: head"/>
 <body>
 
     <nav th:replace="partials :: navbar"/>
-    <header th:replace="partials::header"/>
+
 
     <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
