--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -5,22 +5,33 @@
 <!--<div th:fragment="head (title)" >-->
 <!--<title><span th:text="${title}"></span></title>-->
 <!--</div>-->
-<head th:fragment="head(title)"><span><strong>Welcome to Pet-Tential</strong></span>
+<head th:fragment="head"><span><strong>Welcome to Pet-Tential</strong></span>
     <meta charset="UTF-8"/>
     <title th:text="${title}"></title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/css/uikit.min.css" />
 </head>
 
 <body>
-<nav th:fragment="navbar" style="background-color: purple; color: white">
-    <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/sign-up">Register</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
-        <li class="nav-item"><a class="nav-link" href="/adopter/pets">View Pets</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Logout</a></li>
+<nav th:fragment="navbar" style="background-color: purple" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+    <div class="uk-navbar-left">
+    <ul class="uk-navbar-nav">
+        <li style="color: white;">
+            <a class="nav-link" href="">Home</a>
+        </li>
+        <li style="color: white;">
+            <a class="nav-link" href="/sign-up">Register</a>
+        </li>
+        <li style="color: white;">
+            <a class="nav-link" href="/">Login</a>
+        </li>
+        <li style="color: white;">
+            <a class="nav-link" href="/adopter/pets">View Pets</a>
+        </li>
+        <li style="color: white;">
+            <a class="nav-link" href="/">Logout</a>
+        </li>
     </ul>
+    </div>
 </nav>
 
 <div th:fragment="footer">
@@ -29,9 +40,8 @@
     </footer>
 </div>
 <div th:fragment="scripts">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.2/js/uikit-icons.min.js"></script>
 </div>
 
 </body>
