--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<nav th:replace="partials :: navbar"/>
 <h1>Search</h1>
 <form action="/search" method="post">
     <input type="text" name="search"/>
