--- a/src/main/resources/templates/shelter/createProgram.html
+++ b/src/main/resources/templates/shelter/createProgram.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Shelter PROGRAMS PAGE</title>
 </head>
-@Column
-private String breed;
+<nav th:replace="partials :: navbar"/>
 <body>
 <h1>PROGRAM NAME</h1>
 <h2>SHELTER NAME</h2>
