--- a/src/main/resources/templates/shelter/home.html
+++ b/src/main/resources/templates/shelter/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head('Home')"/>
+<head th:replace = "partials :: head"/>
 <body>
 
 <nav th:replace="partials :: navbar"/>
@@ -8,7 +8,7 @@
 <div class="container">
     <!--Row One-->
     <div class="row">
-        <header th:replace="partials :: header"/>
+
     </div>
 
     <!--Row Two: Three columns-->
