--- a/src/main/resources/templates/adopter/all_pets.html
+++ b/src/main/resources/templates/adopter/all_pets.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace = "partials :: head('Pets Available')"/>
+<head th:replace = "partials :: head"/>
 <body>
 
 <nav th:replace="partials :: navbar"/>
@@ -12,7 +12,7 @@
    <div class="col-md-4 col-lg-3">
        <div class="card" th:each="pet : ${pets}">
         <div class="card-body">
-            <a th:href="'adopt/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="card-img-top" alt="Pet Image"/></a>
+            <a th:href="'/adopter/pet/' + ${pet.id}"><img th:src="${pet.picture}" class="card-img-top" alt="Pet Image"/></a>
             <h3 class="card-title" th:text="${pet.age}"></h3>
             <p class="card-text" th:text="${pet.description}"></p>
             <p class="card-text" th:text="${pet.sex}"></p>
