--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -21,5 +21,7 @@
     <input id="password" name="password" type="password" />
     <input type="submit" value="Log In" />
 </form>
+
+<p><a th:href="@{/sign-up}">Need to sign-up?</a></p>
 </body>
 </html>
